fix cta position on mobile

--- a/src/assets/scss/02-layout/_l-header.scss
+++ b/src/assets/scss/02-layout/_l-header.scss
@@ -33,6 +33,9 @@
 }
 
 .top-bar-right {
+  .button {
+    margin-left: 1rem;
+  }
   @include breakpoint(medium) {
     margin-top: 3px;
     .button {
